# ir-plot

./: IRvisualizer.py  README.md  pyproject.toml  sample_data.csv
