[tool.poetry]
name = "ir-plot"
version = "0.1.0"
description = "Tool to normalize and visualize IR spectra from csv files"
authors = ["jugoetz <70372980+jugoetz@users.noreply.github.com>"]
license = "AGPL"

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^1.3.0"
matplotlib = "^3.4.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
